@@ -1,4 +1,4 @@
-; result: t
+; result: "global b"
 ; output: "in f""vorher ""global a""global b"\n"in f""im let ""global a""global b"\n"in f""nachher""global a""global b"\n
 
 (define a "global a")
