@@ -2,4 +2,4 @@
   (quote Hello\,\ World!))
 
 ; output: |Hello, World!|
-; result: t
+; result: |Hello, World!|
