@@ -1,5 +1,5 @@
 ; output: "f""globval"4.0"f""globval"3.0"f""globval"2.0"f""globval"1.0"body 1""body 2"
-; result: t
+; result: "body 2"
 
 (letrec ((x (+ 1 1))
          (y (+ x 2))
