@@ -1,5 +1,5 @@
 ; output: 1.02.03.02.01.00.0-1.00.0
-; result: t
+; result: 0.0
 
 ; inc and dec close over the same variable n
 (let ((n 0))
