@@ -2,6 +2,6 @@
 ; should both be executed, result will be the result of the last expression
 
 ; output: |Hello, |World!
-; result: t
+; result: World!
 
 (write (quote Hello\,\ ))(write (quote World!))
