@@ -1,4 +1,4 @@
-; result: t
+; result: hello
 ; output: hello\n
 
 ((lambda (a) (writeln a)) (quote hello))
